--- a/src/components/base/Base.css
+++ b/src/components/base/Base.css
@@ -1,5 +1,5 @@
 .base_container {
-  padding: 10% 5% 10% 15%;
+  padding: 4rem 5% 4rem 15%;
   color: #fff;
   display: flex;
   flex-direction: column;
